Create migration and update database (create) with dotnet ef

--- a/SuperHeroAPI/appsettings.json
+++ b/SuperHeroAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-32H8NKU;Database=superherodb;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
